# decentralized-recording-oracle

./: Makefile  README.md
recording-oracle-master/app/: Cargo.toml  Makefile
recording-oracle-master/app/src/: main.rs
recording-oracle-master/enclave/: Cargo.toml  Enclave.edl  Makefile
recording-oracle-master/enclave/src/: lib.rs
recording-oracle-worker/app/: Cargo.toml  Makefile
recording-oracle-worker/app/src/: main.rs
recording-oracle-worker/enclave/: Cargo.toml  Enclave.edl  Makefile
recording-oracle-worker/enclave/src/: lib.rs
